<resources>
    <string name="app_name">Memory Test</string>
    <string name="watchThis">Look carefully at this picture</string>

    <string name="question1">How many fish are there in the picture?</string>
    <string name="q1answer1">6</string>
    <string name="q1answer2">9</string>
    <string name="q1answer3">12</string>
    <string name="q1answer4">14</string>

    <string name="question2">What animal was standing on the horse?</string>
    <string name="q2answer1">Cat</string>
    <string name="q2answer2">Dog</string>
    <string name="q2answer3">Rooster</string>
    <string name="q2answer4">Duck</string>

    <string name="question3">What animals were present in the picture?</string>
    <string name="q3answer1">Elephant</string>
    <string name="q3answer2">Lemur</string>
    <string name="q3answer3">Rhinoceros</string>
    <string name="q3answer4">Flamingo</string>

    <string name="question4">What was the word we asked you to remember at the beginning of the quiz?</string>
    <string name="right_answer">Right!</string>
    <string name="wrong_answer">Wrong. The answer was:</string>
    <string name="q3wrong_answer">Wrong. There was an elephant, a lemur and a rhinoceros, but no flamingo.</string>
    <string name="secret_word">banana</string>
    <string name="secret_word_wrong_answer">We were looking for: Banana</string>
    <string name="end_page">Well Done, you have completed the test! Your final score is:</string>


</resources>
