<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        style="@style/Questions"
        android:text="@string/question3"
        android:id="@+id/question"/>


    <CheckBox
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/q3answer1"
        android:id="@+id/q3ans1"
        android:layout_margin="8dp"/>

    <CheckBox
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/q3answer2"
        android:id="@+id/q3ans2"
        android:layout_margin="8dp"/>

    <CheckBox
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/q3answer3"
        android:id="@+id/q3ans3"
        android:layout_margin="8dp"
        />

    <CheckBox
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/q3answer4"
        android:id="@+id/q3ans4"
        android:layout_margin="8dp"/>

    <TextView
        style="@style/Answers"
        android:id="@+id/bottomText3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:onClick="Answer3"
        android:id="@+id/submit3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:clickable="false"
        android:enabled="false"
        android:onClick="Answer4page"
        android:id="@+id/next3"/>

</LinearLayout>