<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:text="@string/question1"
        style="@style/Questions"
        android:id="@+id/question"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <RadioButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/q1answer1"
            android:id="@+id/q1ans1"
            android:layout_margin="8dp"
            />

        <RadioButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/q1answer2"
            android:id="@+id/q1ans2"
            android:layout_margin="8dp"
            />

        <RadioButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/q1answer3"
            android:id="@+id/q1ans3"
            android:layout_margin="8dp"
            />

        <RadioButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/q1answer4"
            android:id="@+id/q1ans4"
            android:layout_margin="8dp"
            />


    </RadioGroup>

    <TextView
        style="@style/Answers"
        android:id="@+id/bottomText1"/>

    <TextView
        style="@style/Answers"
        android:id="@+id/bottomText1bis"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:onClick="Answer1"
        android:id="@+id/submit1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:enabled="false"
        android:clickable="false"
        android:onClick="startQuestion2"
        android:id="@+id/next1"/>

</LinearLayout>
